--- a/taxonomy_full_length.ipynb
+++ b/taxonomy_full_length.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### NOTE: THIS FILE COMPAIRES THE FULL LENGTH CLASSIFIER VS THE 515f/806r CLASSIFIER FROM GREENGENES. \n",
     "\n",
-    "**RESULTS:** When coparing the taxonomic classification of some feature IDs (classificatio with 515f/806r vs full-length) we discovered that the 515f-806r-classifier classified them to a slightly deeper taxonomic level. (SEE FIGURE SCREENSHOTS) A more precise classification is beneficial to further analysis and since it was reported that species-level classification performance of 16S rRNA gene simulated reads had a slightly lower accuracy in full-length sequences than in V1–3 and V4 subdomains we decided to continue with the 515f-806r-classifier from Greengenes.\n",
+    "**RESULTS:** When comparing the taxonomic classification of some feature IDs (classificatio with 515f/806r vs full-length) we discovered that the 515f-806r-classifier classified them to a slightly deeper taxonomic level. (SEE FIGURE SCREENSHOTS in project pdf) A more precise classification is beneficial to further analysis and since it was reported that species-level classification performance of 16S rRNA gene simulated reads had a slightly lower accuracy in full-length sequences than in V1–3 and V4 subdomains we decided to continue with the 515f-806r-classifier from Greengenes.\n",
     "\n",
     "feature ID example: 008e3cd88aac471b14f17c6ebd6dcff1\t\n",
     "\n",
