--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -17,13 +17,18 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import qiime2 as q2\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
     "from qiime2 import Visualization\n",
     "from skbio import OrdinationResults\n",
-    "import matplotlib.pyplot as plt\n",
     "from seaborn import scatterplot\n",
-    "import numpy as np\n",
+    "from scipy import stats\n",
     "\n",
-    "import qiime2 as q2\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore')\n",
     "\n",
     "%matplotlib inline\n",
     "data_dir = 'CE'"
