--- a/Interactive Map.ipynb
+++ b/Interactive Map.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6897ce7c-6bc6-4d4a-970b-2b4b6480f7d0",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e53c9855-745a-4304-bb0f-5311389678f7",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "312dfea4-dafb-492b-ac60-994d916f2075",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (685299790.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    qiime diversity alpha --i-table dada2_table_align_filtered.qza --p-metric observed_features --o-alpha-diversity alpha_diversity_sample.qza\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "qiime diversity alpha --i-table dada2_table_align_filtered.qza --p-metric observed_features --o-alpha-diversity alpha_diversity_sample.qza"
    ]
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "45456245-a0df-4fea-87bd-9309c28b9845",
    "metadata": {},
    "outputs": [
@@ -79,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-12-10 12:34:18 URL:https://polybox.ethz.ch/index.php/s/ighOn6YVfaH3kp3/download [1232460/1232460] -> \"CE/diversity-interactive-map.qzv\" [1]\n"
+      "2022-12-17 19:28:57 URL:https://polybox.ethz.ch/index.php/s/ighOn6YVfaH3kp3/download [1232460/1232460] -> \"CE/diversity-interactive-map.qzv\" [1]\n"
      ]
     }
    ],
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b072feb9-93e9-45c7-8ca8-1c318ae2e1c1",
    "metadata": {},
    "outputs": [
@@ -126,13 +135,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ah8m28x_')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-q3_d4_ds')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: dfcb57b3-5e53-46b7-8b97-b7af0d2f6477>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
