--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -3189,7 +3189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "deefc536-aae4-4ac4-a1a5-2d9f6099463b",
    "metadata": {},
    "outputs": [
@@ -3244,12 +3244,12 @@
     "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
-    "fig.savefig(\"rt_alpha_vp.png\", dpi = 400)"
+    "fig.savefig(\"rt_a_vp.png\", dpi = 400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "d1deec37-4efb-4718-b348-9c66248870b3",
    "metadata": {},
    "outputs": [
@@ -3323,12 +3323,12 @@
     "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
-    "fig.savefig(\"past_cont_vp.png\", dpi = 400)"
+    "fig.savefig(\"past_cont_a_vp.png\", dpi = 400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "id": "f8ea3dfe-bc4d-483e-a440-138985c70e99",
    "metadata": {},
    "outputs": [
@@ -3379,12 +3379,12 @@
     "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
-    "fig.savefig(\"style_vp.png\", dpi = 400)"
+    "fig.savefig(\"style_a_vp.png\", dpi = 400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "id": "7a144927-0c3d-4e9f-90a1-a19b51d604c2",
    "metadata": {},
    "outputs": [
@@ -3435,12 +3435,12 @@
     "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
-    "fig.savefig(\"animal_vp.png\", dpi = 400)"
+    "fig.savefig(\"animal_a_vp.png\", dpi = 400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "id": "ce3a5d35-c10d-4f63-9977-f0e528e29285",
    "metadata": {},
    "outputs": [
@@ -3491,7 +3491,7 @@
     "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
-    "fig.savefig(\"country_vp.png\", dpi = 400)"
+    "fig.savefig(\"country_a_vp.png\", dpi = 400)"
    ]
   },
   {
