I think we are done with this :)

--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1942,6 +1942,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccd6a91a-48a5-4491-a533-ae64521e32c4",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Some tries:\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "a0f48529-3b0f-479d-9971-9d630a538803",
@@ -2278,6 +2287,14 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3b28f1-e365-4c8c-866e-40e39f0b5dab",
+   "metadata": {},
+   "source": [
+    "Some further tries"
    ]
   },
   {
@@ -2968,10 +2985,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98a396e2-7999-4149-b1b4-0e7a7b6db3b6",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "77bf5551-dfd5-4546-9f60-03d4e5422cbd",
    "metadata": {},
    "source": [
     "The group decided on violinplots and one x-axis label. Also it was decided to keep the default color scheme to have coordinated colours across the report. So let's get creating the next violinplots for our remaining columns! Yeehaww B-)\n",
+    "\n",
+    "First, subsets from the metrics_md dataframe for each columns were made and some value names were replaced.\n",
     "\n",
     "---"
    ]
@@ -2997,7 +3024,7 @@
     "#subset3 = cheese style\n",
     "subset3 = metrics_md[['faith_pd', 'observed_features', 'shannon_entropy', 'pielou_evenness', 'style']]\n",
     "#a lot of cheeses have a missing NaN value for style. When plotting those values are not displayed\n",
-    "#I would like them to be displayed though, as it makes up the biggest part:\n",
+    "#I would like them to be displayed though, as it makes up the biggest part of cheese style:\n",
     "subset3['style'] = subset3['style'].fillna('unassigned')\n",
     "subset3['style'] = subset3['style'].replace('washed_bloomy','washed/bloomy')\n",
     "\n",
@@ -3008,173 +3035,6 @@
     "\n",
     "#subset4 = countries\n",
     "subset5 = metrics_md[['faith_pd', 'observed_features', 'shannon_entropy', 'pielou_evenness', 'country']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "ef4680b4-7e04-4dd0-a17b-5aee862588d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>faith_pd</th>\n",
-       "      <th>observed_features</th>\n",
-       "      <th>shannon_entropy</th>\n",
-       "      <th>pielou_evenness</th>\n",
-       "      <th>style</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB280</th>\n",
-       "      <td>9.111393</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1.641100</td>\n",
-       "      <td>0.353392</td>\n",
-       "      <td>unassigned</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB281</th>\n",
-       "      <td>10.492586</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2.611748</td>\n",
-       "      <td>0.569633</td>\n",
-       "      <td>unassigned</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB282</th>\n",
-       "      <td>9.983138</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2.348323</td>\n",
-       "      <td>0.519131</td>\n",
-       "      <td>unassigned</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB290</th>\n",
-       "      <td>4.539658</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2.502991</td>\n",
-       "      <td>0.640661</td>\n",
-       "      <td>alpine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB292</th>\n",
-       "      <td>3.130709</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2.353644</td>\n",
-       "      <td>0.656532</td>\n",
-       "      <td>alpine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB980</th>\n",
-       "      <td>8.061571</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1.923263</td>\n",
-       "      <td>0.419472</td>\n",
-       "      <td>blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB981</th>\n",
-       "      <td>6.614198</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.473463</td>\n",
-       "      <td>0.340927</td>\n",
-       "      <td>blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB984</th>\n",
-       "      <td>10.555242</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2.549971</td>\n",
-       "      <td>0.590008</td>\n",
-       "      <td>clothbound</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB985</th>\n",
-       "      <td>11.277596</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2.460126</td>\n",
-       "      <td>0.423623</td>\n",
-       "      <td>alpine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11488.CSB986</th>\n",
-       "      <td>10.604778</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0.977924</td>\n",
-       "      <td>0.182532</td>\n",
-       "      <td>alpine</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>337 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               faith_pd  observed_features  shannon_entropy  pielou_evenness  \\\n",
-       "11488.CSB280   9.111393                 25         1.641100         0.353392   \n",
-       "11488.CSB281  10.492586                 24         2.611748         0.569633   \n",
-       "11488.CSB282   9.983138                 23         2.348323         0.519131   \n",
-       "11488.CSB290   4.539658                 15         2.502991         0.640661   \n",
-       "11488.CSB292   3.130709                 12         2.353644         0.656532   \n",
-       "...                 ...                ...              ...              ...   \n",
-       "11488.CSB980   8.061571                 24         1.923263         0.419472   \n",
-       "11488.CSB981   6.614198                 20         1.473463         0.340927   \n",
-       "11488.CSB984  10.555242                 20         2.549971         0.590008   \n",
-       "11488.CSB985  11.277596                 56         2.460126         0.423623   \n",
-       "11488.CSB986  10.604778                 41         0.977924         0.182532   \n",
-       "\n",
-       "                   style  \n",
-       "11488.CSB280  unassigned  \n",
-       "11488.CSB281  unassigned  \n",
-       "11488.CSB282  unassigned  \n",
-       "11488.CSB290      alpine  \n",
-       "11488.CSB292      alpine  \n",
-       "...                  ...  \n",
-       "11488.CSB980        blue  \n",
-       "11488.CSB981        blue  \n",
-       "11488.CSB984  clothbound  \n",
-       "11488.CSB985      alpine  \n",
-       "11488.CSB986      alpine  \n",
-       "\n",
-       "[337 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "subset3"
    ]
   },
   {
@@ -3198,9 +3058,7 @@
     "# violin plots for rindtype\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(12, 4))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "\n",
     "    ax1 = sns.violinplot(data=subset1, x='rindtype', y='faith_pd', ax=axes[0])\n",
     "    ax2 = sns.violinplot(data=subset1, x='rindtype', y='observed_features', ax=axes[1])\n",
     "    ax3 = sns.violinplot(data=subset1, x='rindtype', y='shannon_entropy', ax=axes[2])\n",
@@ -3208,9 +3066,7 @@
     "\n",
     "fig.tight_layout(w_pad=4, h_pad=3)\n",
     "    \n",
-    "\n",
-    "# set title and labels for individual plots\n",
-    "#ax1.set_title('Faith PD', fontsize=12)\n",
+    "# set labels\n",
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax1.tick_params(axis='x', labelsize=11)\n",
@@ -3218,9 +3074,6 @@
     "ax2.set_ylabel('Observed Features', fontsize=14)\n",
     "ax2.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax2.tick_params(axis='x', labelsize=11)\n",
-    "# ax2.yaxis.set_label_position(\"right\")\n",
-    "# better left with more space in between:\n",
-    "#fig.tight_layout(h_pad=3)\n",
     "\n",
     "ax3.set_ylabel('Shannon Entropy', fontsize=14)\n",
     "ax3.set_xlabel('Rindtypes', fontsize=14)\n",
@@ -3229,9 +3082,6 @@
     "ax4.set_ylabel('Pielou Evenness', fontsize=14)\n",
     "ax4.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax4.tick_params(axis='x', labelsize=11)\n",
-    "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
     "fig.savefig(\"rt_a_vp.png\", dpi = 400)"
@@ -3259,11 +3109,7 @@
     "\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(12, 8))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
     "\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
     "    ax1 = sns.violinplot(data=subset2, x='pasteurized', y='faith_pd', ax=axes[0,0])\n",
     "    ax2 = sns.violinplot(data=subset2, x='pasteurized', y='observed_features', ax=axes[0,1])\n",
     "    ax3 = sns.violinplot(data=subset2, x='pasteurized', y='shannon_entropy', ax=axes[0,2])\n",
@@ -3275,7 +3121,7 @@
     "\n",
     "    fig.tight_layout(w_pad=4, h_pad=3)\n",
     "\n",
-    "# set title and labels for individual plots\n",
+    "# set labels for individual plots\n",
     "\n",
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Pasteurized', fontsize=14)\n",
@@ -3309,10 +3155,6 @@
     "ax8.set_xlabel('Continent', fontsize=14)\n",
     "ax8.tick_params(axis='x', labelsize=12)\n",
     "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
-    "\n",
-    "#and finaly let's save the figure :D\n",
     "fig.savefig(\"past_cont_a_vp.png\", dpi = 400)"
    ]
   },
@@ -3337,9 +3179,7 @@
     "# violin plots for cheese style\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(12, 8))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "\n",
     "    ax1 = sns.violinplot(data=subset3, x='style', y='faith_pd', ax=axes[0,0])\n",
     "    ax2 = sns.violinplot(data=subset3, x='style', y='observed_features', ax=axes[0,1])\n",
     "    ax3 = sns.violinplot(data=subset3, x='style', y='shannon_entropy', ax=axes[1,0])\n",
@@ -3347,8 +3187,7 @@
     "\n",
     "    fig.tight_layout(w_pad=4, h_pad=5)\n",
     "\n",
-    "# set title and labels for individual plots\n",
-    "#ax1.set_title('Faith PD', fontsize=12)\n",
+    "# set labels for individual plots\n",
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Cheese Style', fontsize=14)\n",
     "ax1.tick_params(axis='x', labelsize=12, rotation = 15)\n",
@@ -3364,9 +3203,6 @@
     "ax4.set_ylabel('Pielou Evenness', fontsize=14)\n",
     "ax4.set_xlabel('Cheese Style', fontsize=14)\n",
     "ax4.tick_params(axis='x', labelsize=12, rotation = 15)\n",
-    "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
     "fig.savefig(\"style_a_vp.png\", dpi = 400)"
@@ -3393,9 +3229,7 @@
     "# violin plots for animal source\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(12, 8))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "   \n",
     "    ax1 = sns.violinplot(data=subset4, x='animal_source', y='faith_pd', ax=axes[0,0])\n",
     "    ax2 = sns.violinplot(data=subset4, x='animal_source', y='observed_features', ax=axes[0,1])\n",
     "    ax3 = sns.violinplot(data=subset4, x='animal_source', y='shannon_entropy', ax=axes[1,0])\n",
@@ -3403,8 +3237,7 @@
     "\n",
     "fig.tight_layout(w_pad=4, h_pad=3)\n",
     "\n",
-    "# set title and labels for individual plots\n",
-    "#ax1.set_title('Faith PD', fontsize=12)\n",
+    "# set labels for individual plots\n",
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Animal Source', fontsize=14)\n",
     "ax1.tick_params(axis='x', labelsize=12)\n",
@@ -3420,9 +3253,6 @@
     "ax4.set_ylabel('Pielou Evenness', fontsize=14)\n",
     "ax4.set_xlabel('Animal Source', fontsize=14)\n",
     "ax4.tick_params(axis='x', labelsize=12)\n",
-    "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
     "fig.savefig(\"animal_a_vp.png\", dpi = 400)"
@@ -3449,9 +3279,7 @@
     "# violin plots for countries\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(18, 8))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "\n",
     "    ax1 = sns.violinplot(data=subset5, x='country', y='faith_pd', ax=axes[0,0])\n",
     "    ax2 = sns.violinplot(data=subset5, x='country', y='observed_features', ax=axes[0,1])\n",
     "    ax3 = sns.violinplot(data=subset5, x='country', y='shannon_entropy', ax=axes[1,0])\n",
@@ -3459,8 +3287,6 @@
     "\n",
     "fig.tight_layout(w_pad=4, h_pad=3)\n",
     "\n",
-    "# set title and labels for individual plots\n",
-    "#ax1.set_title('Faith PD', fontsize=12)\n",
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Countries', fontsize=14)\n",
     "ax1.tick_params(axis='x', labelsize=12)\n",
@@ -3476,9 +3302,6 @@
     "ax4.set_ylabel('Pielou Evenness', fontsize=14)\n",
     "ax4.set_xlabel('Countries', fontsize=14)\n",
     "ax4.tick_params(axis='x', labelsize=12)\n",
-    "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
     "\n",
     "#and finaly let's save the figure :D\n",
     "fig.savefig(\"country_a_vp.png\", dpi = 400)"
@@ -3553,7 +3376,7 @@
    "source": [
     "sns.set(rc={'figure.figsize':(9, 9), 'font.family': ['DejaVu Sans']}, style='white')\n",
     "with sns.plotting_context(\"notebook\", font_scale=1.3):\n",
-    "    # seaborn's scatter plot\n",
+    "    \n",
     "    ax = sns.scatterplot(\n",
     "        x=faith_salt_moist['salt'], \n",
     "        y=faith_salt_moist['faith_pd'], \n",
@@ -3562,12 +3385,9 @@
     "        alpha=0.5,\n",
     "    )\n",
     "\n",
-    "\n",
-    "    # matplotlib's customization\n",
     "    ax.set_xlabel('salt')\n",
     "    ax.set_ylabel('Faith')\n",
     "        \n",
-    "\n",
     "    ax.tick_params(axis='x', which='minor', bottom=True)\n",
     "    ax.tick_params(axis='y', which='minor', left=True)\n",
     "    \n",
